--- a/index.html
+++ b/index.html
@@ -96,14 +96,15 @@
                 </div>
 
                   -->
-                <img class = "imgLogo" src="https://bdu.ac.bd/assets/images/logo/logo1.png" alt="">
+                <img class = "imgLogo" src="logo1.png" alt="">
                 
                 <br>
                 <div class="roomBox" id="" style="background: green;">Empty</div>
                 <div class="roomBox" id="" style="background: red;">Teaching</div>
                 <br>
                 <p>Select button Day with hour</p>
-                
+                <br>
+                <a class="seeRoutine" href="EdTech2020-21-G2.html">See Class Routine</a>
             </div>
         </div>
         <br>
