--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
 
                   -->
-                <img class = "imgLogo" src="logo1.png" alt="">
+                <img class = "imgLogo" src="http://www.bdu.ac.bd/assets/images/logo/logo1.png" alt="">
                 
                 <br>
                 <div class="roomBox" id="" style="background: green;">Empty</div>
