--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <br>
                 <p>Select button Day with hour</p>
                 <br>
-                <a class="seeRoutine" href="EdTech2020-21-G2.html">See Class Routine</a>
+                <a class="seeRoutine" href="EdTech2020-21-G2.html">See All Class Routine</a>
             </div>
         </div>
         <br>
