--- a/bduR.html
+++ b/bduR.html
@@ -20,17 +20,25 @@
     float: right;
     margin-right: 100px;
     margin-bottom: 20px;
+    overflow: hidden;
+     
     }
 
     .home_back {
-      border: 1px solid #ddd;
-      padding: 20px;
-      margin: 20px 20px 20px 20px;
+      border: 1px solid green;
+      padding: 10px 10px;
+      margin: 15px 0 0 10px;
       width: 140px;
       text-decoration: none;
       color: green;
       font-size: 30px;
       text-align: center;
+      position: absolute;
+    }   
+    .home_back:hover {
+      border: 1px solid #ddd;
+      background-color: green;
+     color: white;
     }
 
     
@@ -315,7 +323,7 @@
         <td></td>
       </tr>
       <tr>
-        <td colspan="10" style="width: 1100px;">Rony Ahmmed BDU-EdTech with Md Rohan Mondal BDU-IRE</td>
+        <td colspan="10" style="width: 1100px;">Rony Ahmmed BDU-EdTech</td>
       </tr>
     </table>
 
@@ -386,7 +394,7 @@
         <td colspan="2">ICT 4361 Tutorial: <br> TBA6 R: 4002 </td>
       </tr>
       <tr>
-        <td colspan="10" style="width: 1100px;">Rony Ahmmed BDU-EdTech with Md Rohan Mondal BDU-IRE</td>
+        <td colspan="10" style="width: 1100px;">Rony Ahmmed BDU-EdTech</td>
       </tr>
     </table>
     <!-- The end -->
@@ -455,7 +463,7 @@
         <td colspan="2">ICT 4361 Tutorial: <br> TBA6 R: 4002 </td>
       </tr>
       <tr>
-        <td colspan="10" style="width: 1100px;">Rony Ahmmed BDU-EdTech with Md Rohan Mondal BDU-IRE</td>
+        <td colspan="10" style="width: 1100px;">Rony Ahmmed BDU-EdTech</td>
       </tr>
     </table>
     <!-- The end -->
@@ -524,7 +532,7 @@
         <td colspan="2">ICT 4253 Tutorial: <br> TBA6 R: 5002</td>
       </tr>
       <tr>
-        <td colspan="10" style="width: 1100px;">Rony Ahmmed BDU-EdTech with Md Rohan Mondal BDU-IRE</td>
+        <td colspan="10" style="width: 1100px;">Rony Ahmmed BDU-EdTech</td>
       </tr>
     </table>
     <!-- The end -->
@@ -593,7 +601,7 @@
         <td colspan="2">ICT 4253 Tutorial: <br> TBA6 R: 5002</td>
       </tr>
       <tr>
-        <td colspan="10" style="width: 1100px;">Rony Ahmmed BDU-EdTech with Md Rohan Mondal BDU-IRE</td>
+        <td colspan="10" style="width: 1100px;">Rony Ahmmed BDU-EdTech</td>
       </tr>
     </table>
     <!-- The end -->
@@ -602,7 +610,7 @@
     <table class="r_table" id="IRE42">
       <tr>
         <td colspan="10">
-          <h1>IRE 2021-22 G-2</h1>
+          <h1>IRE 2021-22 G-1</h1>
         </td>
       </tr>
 
@@ -666,7 +674,7 @@
         <td></td>
       </tr>
       <tr>
-        <td colspan="10" style="width: 1100px;">Rony Ahmmed BDU-EdTech with Md Rohan Mondal BDU-IRE</td>
+        <td colspan="10" style="width: 1100px;">Rony Ahmmed BDU-EdTech</td>
       </tr>
     </table>
 
@@ -740,7 +748,7 @@
         <td></td>
       </tr>
       <tr>
-        <td colspan="10" style="width: 1100px;">Rony Ahmmed BDU-EdTech with Md Rohan Mondal BDU-IRE</td>
+        <td colspan="10" style="width: 1100px;">Rony Ahmmed BDU-EdTech</td>
       </tr>
     </table>
 
@@ -1174,9 +1182,9 @@
     <!-- The end -->
     <!-- footer start -->
     <div class="row EmptyClassRoom">
-      <h2>Empty Class Room</h2>
+      <h2>Smart Class Routine</h2>
       <a style="text-decoration: none; color: white;" href="https://www.facebook.com/EdTech4">
-        <h3>Develop by Rony Ahmmed BDU-EdTech</h3>
+        <h3>Developed By Rony Ahmmed BDU-EdTech</h3>
       </a>
       <h5>bdu.rony@gmail.com</h5>
       <p>Copyright © 2023 All Rights Reserved.</p>
