--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <!-- footer start -->
         <div class="row EmptyClassRoom">
             <h2>Empty Class Room</h2>
-            <a style="text-decoration: none; color: white;" href="https://www.facebook.com/EdTech4"><h3>Develop by Rony Ahmmed BDU-EdTech</h3></a>
+            <a style="text-decoration: none; color: white;" href="https://www.facebook.com/EdTech4"><h3>Developed By Rony Ahmmed BDU-EdTech</h3></a>
             <h5>bdu.rony@gmail.com</h5>
             <p>Copyright © 2023 All Rights Reserved.</p>
         </div>
