--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <!-- this is day menu start -->
         <div class="row">
             <div class="col dayMenu">
+                <button  id="dayBox"><a class="dayBoxNow" href="test.html">Now</a> 
                 <button class="dayBox" id="Saturday">Saturday</button>
                 <button class="dayBox" id="Sunday">Sunday</button>
                 <button class="dayBox" id="Monday">Monday</button>
