--- a/test.html
+++ b/test.html
@@ -76,7 +76,7 @@ body{
 .dayMenu{
     height: 300px;
     width: 165px;
-    
+    margin-top: -35px;
     padding: 5px;
 }
 .dayBox{
@@ -190,7 +190,7 @@ body{
     display: block;
     overflow: hidden;
     text-align: center;
-    background-color: #f26d21 ;
+    background-color: #f26d21b0 ;
     padding: 10px;
 }
     </style>
@@ -221,6 +221,7 @@ body{
         <!-- this is day menu start -->
         <div class="row">
             <div class="col dayMenu">
+                <button class="dayBox" id="">Now !</button>
                 <button class="dayBox" id="Saturday">Saturday</button>
                 <button class="dayBox" id="Sunday">Sunday</button>
                 <button class="dayBox" id="Monday">Monday</button>
