--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/30334499?v=4">
+    <link rel="icon" type="image/x-icon" href="http://www.bdu.ac.bd/assets/images/logo/logo1.png">
     <title>BDU Room And Routine</title>
 </head>
 <body>
