--- a/test.html
+++ b/test.html
@@ -93,6 +93,17 @@ body{
     background: red;
 }
 
+.dayBoxNow{
+    text-decoration: none;
+    height: 35px;
+    width: 143px;
+    display: inline-table;
+    color: #e1e6ff;
+    background-color: green;
+    font-size: 24px;
+    border: 2px solid#ddd;
+}
+
 .roomMenu{
     width: 600px;
     height: 290px;
@@ -221,7 +232,7 @@ body{
         <!-- this is day menu start -->
         <div class="row">
             <div class="col dayMenu">
-                <button class="dayBox" id="">Now !</button>
+                <button  id="dayBox"><a class="dayBoxNow" href="index.html">Previous</a>
                 <button class="dayBox" id="Saturday">Saturday</button>
                 <button class="dayBox" id="Sunday">Sunday</button>
                 <button class="dayBox" id="Monday">Monday</button>
