--- a/bduR.html
+++ b/bduR.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/30334499?v=4">
   <title>Routine BDU</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="Mstyle.css">
   <style>
     .nowBox1{
     width: 800px;
@@ -81,6 +83,24 @@
 </head>
 
 <body>
+  <div class="container">
+    <div class="navbar">
+        <a href="index.html">Room</a>
+        <a href="bduR.html">Routine</a>
+        <a href="https://bdu.ac.bd">BDU</a>
+        <div class="dropdown">
+          <button class="dropbtn">Teacher
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="teacherEdTech.html">EdTech</a>
+            <a href="teacherIRE.html">IRE</a>
+          </div>
+        </div>
+        <a href="link.jpg">QR Code</a>
+      </div>
+</div>
+
   <div class="container bduroutine">
     <h1 class="University">Bangabandhu Sheikh Mujibur Rahman Digital University, Bangladesh</h1>
     <br>
