--- a/index.html
+++ b/index.html
@@ -3,11 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Mstyle.css">
     <link rel="icon" type="image/x-icon" href="http://www.bdu.ac.bd/assets/images/logo/logo1.png">
     <title>BDU Room And Routine</title>
 </head>
 <body>
+    <div class="container">
+        <div class="navbar">
+            <a href="index.html">Room</a>
+            <a href="bduR.html">Routine</a>
+            <a href="https://bdu.ac.bd">BDU</a>
+            <div class="dropdown">
+              <button class="dropbtn">Teacher
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                <a href="teacherEdTech.html">EdTech</a>
+                <a href="teacherIRE.html">IRE</a>
+              </div>
+            </div>
+            <a href="link.jpg">QR Code</a>
+          </div>
+    </div>
     <div class="container">
         <h1 class="University" >Bangabandhu Sheikh Mujibur Rahman Digital University, Bangladesh</h1>
         <br>
