--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="Mstyle.css">
     <link rel="icon" type="image/x-icon" href="http://www.bdu.ac.bd/assets/images/logo/logo1.png">
     <title>BDU Room And Routine</title>
 </head>
 <body>
+    <!-- Main menu start -->
     <div class="container">
         <div class="navbar">
             <a href="index.html">Room</a>
@@ -24,9 +24,11 @@
                 <a href="teacherIRE.html">IRE</a>
               </div>
             </div>
-            <a href="link.jpg">QR Code</a>
+            <a href="link.html">QR Code</a>
           </div>
     </div>
+
+    <!-- Room info start -->
     <div class="container">
         <h1 class="University" >Bangabandhu Sheikh Mujibur Rahman Digital University, Bangladesh</h1>
         <br>
@@ -85,6 +87,7 @@
                 <div class="roomBox" id="L1003">L-1003</div>
                 <div class="roomBox" id="R1004">ROOM</div>
             </div>
+            <!-- University logo right site start -->
             <div class="col findArea">
                 <img class = "imgLogo" src="http://www.bdu.ac.bd/assets/images/logo/logo1.png" alt="BDU">
                 <br>
@@ -98,7 +101,7 @@
         </div>
         <br>
         <!-- footer start -->
-        <div class="row EmptyClassRoom">
+        <div class="row footer_area">
             <h2>Empty Class Room</h2>
             <a style="text-decoration: none; color: white;" href="https://www.facebook.com/EdTech4"><h3>Developed By Rony Ahmmed BDU-EdTech</h3></a>
             <h5>bdu.rony@gmail.com</h5>
