--- a/teacherEdTech.html
+++ b/teacherEdTech.html
@@ -34,7 +34,7 @@ table, th, td {
                 </div>
             </div>
             <a href="link.html">QR Code</a>
-            <input style="float: right; height: 30px; margin-top: 5px;" id="myInput" type="text" placeholder="Search..">
+            <input style="float: right; height: 30px; margin-top: 5px; width: 300px; background-color: aliceblue; color: black;" id="myInput" type="text" placeholder="Search..">
         </div>
     </div>
     <header class="container Faculty">
