--- a/link.html
+++ b/link.html
@@ -32,7 +32,7 @@
     <div class="container">
         <h1 class="University" >Bangabandhu Sheikh Mujibur Rahman Digital University, Bangladesh</h1>
         <br>
-        <img class="linkImg" src="link.jpg" alt="QR code">
+        <img class="linkImg" src="link.png" alt="QR code">
         <br>
         <!-- footer start -->
         <div class="row footer_area">
