--- a/class/class.html
+++ b/class/class.html
@@ -13,19 +13,20 @@
     <!-- Main menu start -->
     <div class="container">
         <div class="navbar">
-            <a href="index.html">Room</a>
-            <a href="bduR.html">Routine</a>
+            <a href="../index.html">Room</a>
+            <a href="../bduR.html">Routine</a>
+            <a href="#">Batch</a>
             <a href="https://bdu.ac.bd">BDU</a>
             <div class="dropdown">
               <button class="dropbtn">Teacher
                 <i class="fa fa-caret-down"></i>
               </button>
               <div class="dropdown-content">
-                <a href="teacherEdTech.html">EdTech</a>
-                <a href="teacherIRE.html">IRE</a>
+                <a href="../teacherEdTech.html">EdTech</a>
+                <a href="../teacherIRE.html">IRE</a>
               </div>
             </div>
-            <a href="link.html">QR Code</a>
+            <a href="../link.html">QR Code</a>
           </div>
     </div>
 
@@ -89,7 +90,7 @@
                 <br>
                 <p>Select button Day with hour</p>
                 <br>
-                <a class="seeRoutine" href="bduR.html">See All Class Routine</a>
+                <a class="seeRoutine" href="./bduR.html">See All Class Routine</a>
             </div>
         </div>
         <br>
