--- a/teacherEdTech.html
+++ b/teacherEdTech.html
@@ -23,6 +23,7 @@ table, th, td {
         <div class="navbar">
             <a href="index.html">Room</a>
             <a href="bduR.html">Routine</a>
+            <a href="class/class.html">Batch</a>
             <a href="https://bdu.ac.bd">BDU</a>
             <div class="dropdown">
                 <button class="dropbtn">Teacher
