--- a/bduR.html
+++ b/bduR.html
@@ -15,6 +15,7 @@
     <div class="navbar">
         <a href="index.html">Room</a>
         <a href="bduR.html">Routine</a>
+        <a href="class/class.html">Batch</a>
         <a href="https://bdu.ac.bd">BDU</a>
         <div class="dropdown">
           <button class="dropbtn">Teacher
