--- a/class/class.html
+++ b/class/class.html
@@ -90,7 +90,7 @@
                 <br>
                 <p>Select button Day with hour</p>
                 <br>
-                <a class="seeRoutine" href="./bduR.html">See All Class Routine</a>
+                <a class="seeRoutine" href="../bduR.html">See All Class Routine</a>
             </div>
         </div>
         <br>
