--- a/batch.html
+++ b/batch.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="http://www.bdu.ac.bd/assets/images/logo/logo1.png">
     <title>BDU Room And Routine</title>
+    <!-- request from fahad bhai EdTech-2-->
 </head>
 <body>
     <!-- Main menu start -->
@@ -55,7 +56,7 @@
         <!-- this is day menu start -->
         <div class="row">
             <div class="col dayMenu">
-                <button  id="dayBox"><a class="dayBoxNow" href="liveRoom.html">Now</a> 
+                <button  id="dayBox"><a class="dayBoxNow" href="#">Now</a> 
                 <button class="dayBox" id="Saturday">Saturday</button>
                 <button class="dayBox" id="Sunday">Sunday</button>
                 <button class="dayBox" id="Monday">Monday</button>
@@ -67,33 +68,25 @@
             </div>
 
             <!-- this is room number area start -->
-            <div class="col roomMenu">
-                <div class="roomBox" id="R5001">R-5001</div>
-                <div class="roomBox" id="R5002">R-5002</div>
-                <div class="roomBox" id="L5003">L-5701</div>
-                <div class="roomBox" id="R5004">ROOM</div>
+            <div class="col classMenu">
+                <div class="classBox" id="EdTech1">EdTech-1</div>
+                <div class="classBox" id="EdTech2">EdTech-2</div>
+                <div class="classBox" id="EdTech3">EdTech-3</div>
+                <div class="classBox" id="EdTech4">EdTech-4</div>
+                <div class="classBox" id="EdTech5">EdTech-5</div>
+                <div class="classBox" id="">BATCH</div> 
 
-                <div class="roomBox" id="R4001">R-4001</div>
-                <div class="roomBox" id="R4002">R-4002</div>
-                <div class="roomBox" id="L4701">L-4701</div>
-                <div class="roomBox" id="R4004">ROOM</div>
-
-                <div class="roomBox" id="R2001">R-2001</div>
-                <div class="roomBox" id="R2002">R-2002</div>
-                <div class="roomBox" id="L2701">L-2701</div>
-                <div class="roomBox" id="R2004">ROOM</div>
-
-                <div class="roomBox" id="R1001">R-1001</div>
-                <div class="roomBox" id="R1002">R-1002</div>
-                <div class="roomBox" id="L1003">L-1003</div>
-                <div class="roomBox" id="R1004">ROOM</div>
+                <div class="classBox" id="IRE1">IRE-1</div>
+                <div class="classBox" id="IRE2">IRE-2</div>
+                <div class="classBox" id="IRE3">IRE-3</div>
+                <div class="classBox" id="IRE4">IRE-4</div>
+                <div class="classBox" id="IRE5">IRE-5</div>
+                <div class="classBox" id="">BATCH</div>
             </div>
             <!-- University logo right site start -->
-            <div class="col findArea">
-                <img class = "imgLogo" src="http://www.bdu.ac.bd/assets/images/logo/logo1.png" alt="BDU">
-                <br>
-                <div class="emptyRoom">Empty</div>
-                <div class="teachingRoom">Teaching</div>
+            <div class="col underClass">
+                <div class="emptyClass">Empty</div>
+                <div class="teachingClass">Teaching</div>
                 <br>
                 <p>Select button Day with hour</p>
                 <br>
@@ -103,7 +96,7 @@
         <br>
         <!-- footer start -->
         <div class="row footer_area">
-            <h2>Empty Class Room</h2>
+            <h2>Batch Class Condition</h2>
             <a style="text-decoration: none; color: white;" href="https://www.facebook.com/EdTech4"><h3>Developed By Rony Ahmmed BDU-EdTech</h3></a>
             <h5>bdu.rony@gmail.com</h5>
             <p>Copyright © 2023 All Rights Reserved.</p>
@@ -111,7 +104,7 @@
     </div>
 
     <!-- This javascript file link -->
-    <script src="javascript/roomControll.js"></script>
+    <script src="javascript/batchControll.js"></script>
 <!-- 
     Rony Ahmmed EdTech-BDU
     bdu.rony@gmail.com
