--- a/liveRoom.html
+++ b/liveRoom.html
@@ -55,7 +55,7 @@
         <!-- this is day menu start -->
         <div class="row">
             <div class="col dayMenu">
-                <button  id="dayBox"><a class="dayBoxNow" href="liveRoom.html">Now</a> 
+                <button  id="dayBox"><a class="dayBoxNow" href="index.html">previous</a> 
                 <button class="dayBox" id="Saturday">Saturday</button>
                 <button class="dayBox" id="Sunday">Sunday</button>
                 <button class="dayBox" id="Monday">Monday</button>
@@ -111,7 +111,7 @@
     </div>
 
     <!-- This javascript file link -->
-    <script src="javascript/roomControll.js"></script>
+    <script src="javascript/liveRoomControll.js"></script>
 <!-- 
     Rony Ahmmed EdTech-BDU
     bdu.rony@gmail.com
