--- a/teacherIRE.html
+++ b/teacherIRE.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Faculty List - IRE Department</title>
     <style>
 table, th, td {
@@ -19,24 +19,28 @@ table, th, td {
 </head>
 
 <body>
+    <!-- Main menu start -->
     <div class="container">
         <div class="navbar">
             <a href="index.html">Room</a>
-            <a href="bduR.html">Routine</a>
+            <a href="routineAll.html">Routine</a>
+            <a href="batch.html">Batch</a>
             <a href="https://bdu.ac.bd">BDU</a>
             <div class="dropdown">
-                <button class="dropbtn">Teacher
-                    <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                    <a href="teacherEdTech.html">EdTech</a>
-                    <a href="teacherIRE.html">IRE</a>
-                </div>
+              <button class="dropbtn">Teacher
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                <a href="teacherEdTech.html">EdTech</a>
+                <a href="teacherIRE.html">IRE</a>
+              </div>
             </div>
-            <a href="link.html">QR Code</a>
-            <input style="float: right; height: 30px; margin-top: 5px;" id="myInput" type="text" placeholder="Search..">
-        </div>
+            <a href="QRcode.html">QR Code</a>
+            <input style="float: right; height: 30px; margin-top: 5px; padding-left: 5px;" id="myInput" type="text" placeholder="Search..">
+          </div>
     </div>
+
+
     <header class="container Faculty">
         <h1>Department of IRE</h1>
         <h2>Faculty List</h2>
