--- a/teacherEdTech.html
+++ b/teacherEdTech.html
@@ -36,7 +36,7 @@ table, th, td {
               </div>
             </div>
             <a href="QRcode.html">QR Code</a>
-            <input style="float: right; height: 30px; margin-top: 5px; padding-left: 5px;" id="myInput" type="text" placeholder="Search..">
+            <input style="float: right; height: 30px; margin-top: 5px; padding-left: 5px; background:White ;" id="myInput" type="text" placeholder="Search..">
           </div>
     </div>
 
