--- a/routineAll.html
+++ b/routineAll.html
@@ -28,6 +28,7 @@
           </div>
         </div>
         <a href="QRcode.html">QR Code</a>
+        <a href="helpAndSupport.html">Help & Support</a>
       </div>
   </div>
 
@@ -47,7 +48,7 @@
 
       <tr>
         <th colspan="2"  style="background-color:#5cc8d7;">Department</th>
-        <th colspan="4" style="background-color:#e7c092;">Session</th>
+        <th colspan="5" style="background-color:#e7c092;">Session</th>
         <th colspan="2" style="background-color:#5cc8d7;">Group</th>
       </tr>
 
@@ -58,6 +59,7 @@
         <td id="call_s2019">2019-20</td>
         <td id="call_s2020">2020-21</td>
         <td id="call_s2021">2021-22</td>
+        <td id="call_s2022">2022-23</td>
         <td id="call_G_1">G-1</td>
         <td id="call_G_2">G-2</td>
       </tr>
@@ -1130,6 +1132,115 @@
     </table>
 
     <!-- The end -->
+
+<!-- this area for batch 5 -->
+ <!-- start -->
+ <table class="r_table" id="EdTech51">
+  <tr>
+    <td colspan="10">
+      <h1>EdTech 2022-23 G-1</h1>
+    </td>
+  </tr>
+
+  <tr>
+    <th>Day</th>
+    <th>8:00-8:50</th>
+    <th>9:00-9:50</th>
+    <th>10:00-10:50</th>
+    <th>11:00-11:50</th>
+    <th>12:00-12:50</th>
+    <th>1:00-1:50</th>
+    <th>2:00-2:50</th>
+    <th>3:00-3:50</th>
+    <th>4:00-4:50</th>
+  </tr>
+  <tr>
+    <td colspan="10">empty</td>
+  </tr>
+</table>
+
+<!-- The end -->
+<!-- start -->
+<table class="r_table" id="EdTech52">
+  <tr>
+    <td colspan="10">
+      <h1>EdTech 2022-23 G-2</h1>
+    </td>
+  </tr>
+
+  <tr>
+    <th>Day</th>
+    <th>8:00-8:50</th>
+    <th>9:00-9:50</th>
+    <th>10:00-10:50</th>
+    <th>11:00-11:50</th>
+    <th>12:00-12:50</th>
+    <th>1:00-1:50</th>
+    <th>2:00-2:50</th>
+    <th>3:00-3:50</th>
+    <th>4:00-4:50</th>
+  </tr>
+  <tr>
+    <td colspan="10">empty</td>
+  </tr>
+</table>
+
+<!-- The end -->
+ <!-- start -->
+ <table class="r_table" id="IRE51">
+  <tr>
+    <td colspan="10">
+      <h1>IRE 2022-23 G-1</h1>
+    </td>
+  </tr>
+
+  <tr>
+    <th>Day</th>
+    <th>8:00-8:50</th>
+    <th>9:00-9:50</th>
+    <th>10:00-10:50</th>
+    <th>11:00-11:50</th>
+    <th>12:00-12:50</th>
+    <th>1:00-1:50</th>
+    <th>2:00-2:50</th>
+    <th>3:00-3:50</th>
+    <th>4:00-4:50</th>
+  </tr>
+  <tr>
+    <td colspan="10">empty</td>
+  </tr>
+</table>
+
+<!-- The end -->
+<!-- start -->
+<table class="r_table" id="IRE52">
+  <tr>
+    <td colspan="10">
+      <h1>IRE 2022-23 G-2</h1>
+    </td>
+  </tr>
+
+  <tr>
+    <th>Day</th>
+    <th>8:00-8:50</th>
+    <th>9:00-9:50</th>
+    <th>10:00-10:50</th>
+    <th>11:00-11:50</th>
+    <th>12:00-12:50</th>
+    <th>1:00-1:50</th>
+    <th>2:00-2:50</th>
+    <th>3:00-3:50</th>
+    <th>4:00-4:50</th>
+  </tr>
+  <tr>
+    <td colspan="10">empty</td>
+  </tr>
+</table>
+
+<!-- The end -->
+
+
+
     <!-- footer start -->
     <div class="row footer_area">
       <h2>Smart Class Routine</h2>
