--- a/teacherIRE.html
+++ b/teacherIRE.html
@@ -36,6 +36,7 @@ table, th, td {
               </div>
             </div>
             <a href="QRcode.html">QR Code</a>
+            <a href="helpAndSupport.html">Help & Support</a>
             <input style="float: right; height: 30px; margin-top: 5px; padding-left: 5px;" id="myInput" type="text" placeholder="Search..">
           </div>
     </div>
