--- a/liveRoom.html
+++ b/liveRoom.html
@@ -26,6 +26,7 @@
               </div>
             </div>
             <a href="QRcode.html">QR Code</a>
+            <a href="helpAndSupport.html">Help & Support</a>
           </div>
     </div>
 
