--- a/batch.html
+++ b/batch.html
@@ -57,7 +57,7 @@
         <!-- this is day menu start -->
         <div class="row">
             <div class="col dayMenu">
-                <button  id="dayBox"><a class="dayBoxNow" href="#">Now</a> 
+                <button class="dayBox" id="nowCondition">Now</button>
                 <button class="dayBox" id="Saturday">Saturday</button>
                 <button class="dayBox" id="Sunday">Sunday</button>
                 <button class="dayBox" id="Monday">Monday</button>
@@ -88,6 +88,7 @@
             <div class="col underClass">
                 <div class="emptyClass">Empty</div>
                 <div class="teachingClass">Teaching</div>
+                <div class="teachingOnline">Online</div>
                 <br>
                 <p>Select button Day with hour</p>
                 <br>
