teacher info add

--- a/teacherEdTech.html
+++ b/teacherEdTech.html
@@ -43,7 +43,8 @@ table, th, td {
 
 
     <header class="container Faculty">
-        <h1>Department of Educational Technology (EdTech)</h1>
+        <h1>Department of Educational Technology <a href="https://edtech.bdu.ac.bd/edtech/teachers/active">(EdTech)</a></h1>
+
         <h2>Faculty List</h2>
     </header>
 
@@ -51,7 +52,7 @@ table, th, td {
     <section class="full-time container">
         <table class="t_table">
             <tr>
-                <td colspan="5">
+                <td colspan="8">
                   <h1>Full Time</h1>
                 </td>
             </tr>
@@ -60,77 +61,80 @@ table, th, td {
                 <th>Teacher Name</th>
                 <th>Teacher Initial</th>
                 <th>Designation</th>
-                <th>Email/Phone</th>
+                <th>Phone Number</th>
+                <th>Email</th>
+                <th>Address</th>
+                <th>Blood Group</th>
             </tr>
             <tr>
                 <td>1</td>
                 <td>Md. Ashrafuzzaman</td>
                 <td>AZ</td>
                 <td>Assistant Professor</td>
+                <td>01716504070</td>
                 <td>ashraf0001@bdu.ac.bd</td>
+                <td>Academic Bhaban, BDU</td>
+                <td>O+</td>
             </tr>
             <tr>
                 <td>2</td>
                 <td>Munira Akter Lata</td>
                 <td>MA</td>
                 <td>Lecturer</td>
+                <td>01728378207</td>
                 <td>munira0001@bdu.ac.bd</td>
+                <td>BDU campus, Kaliakoir, Gazipur</td>
+                <td>O+</td>
             </tr>
             <tr>
                 <td>3</td>
                 <td>Farhana Islam</td>
                 <td>FI</td>
                 <td>Lecturer</td>
+                <td>01878499660</td>
                 <td>farhana0001@bdu.ac.bd</td>
+                <td>BDU campus, Kaliakoir, Gazipur</td>
+                <td>A+</td>
             </tr>
             <tr>
                 <td>4</td>
                 <td>Syeda Zakia Nayem</td>
                 <td>ZN</td>
                 <td>Lecturer</td>
+                <td>01933351916</td>
                 <td>zakia0001@bdu.ac.bd</td>
+                <td>BDU campus, Kaliakoir, Gazipur</td>
+                <td>O+</td>
             </tr>
             <tr>
                 <td>5</td>
                 <td>Rubel Sheikh (RS)</td>
                 <td>RS</td>
                 <td>Lecturer</td>
+                <td>01743502507</td>
                 <td>rubel0003@bdu.ac.bd</td>
+                <td>BDU campus, Kaliakoir, Gazipur</td>
+                <td>A+</td>
             </tr>
             <tr>
                 <td>6</td>
                 <td>Aditya Rajbongshi</td>
                 <td>AR</td>
                 <td>Lecturer</td>
+                <td>01628110523</td>
                 <td>aditya0001@bdu.ac.bd</td>
+                <td>BDU campus, Kaliakoir, Gazipur</td>
+                <td>O+</td>
             </tr>
             <tr>
                 <td>7</td>
                 <td>Rakib Hossen</td>
                 <td>RH</td>
                 <td>Lecturer</td>
+                <td>01515653882</td>
                 <td>rakib0001@bdu.ac.bd</td>
-            </tr>
-            <tr>
-                <td>8</td>
-                <td>Md. Nazmuzzaman Shifat</td>
-                <td>NS</td>
-                <td>Lecturer</td>
-                <td>shifat0001@bdu.ac.bd</td>
-            </tr>
-            <tr>
-                <td>9</td>
-                <td>Sujon Chandra Sutradhar</td>
-                <td>SCS</td>
-                <td>Lecturer</td>
-                <td>sujon0001@bdu.ac.bd</td>
-            </tr>
-            <tr>
-                <td>10</td>
-                <td>To be Announced - English</td>
-                <td>TBA-ENG</td>
-                <td></td>
-                <td></td>
+                <td>BDU campus, Kaliakoir, Gazipur</td>
+                <td>B+</td>
             </tr>
         </table>
     </section>
@@ -188,6 +192,7 @@ table, th, td {
         </table>
         <br>
         <br>
+        
 
         <!-- footer start -->
         <div class="row footer_area">
