--- a/teacherIRE.html
+++ b/teacherIRE.html
@@ -43,7 +43,7 @@ table, th, td {
 
 
     <header class="container Faculty">
-        <h1>Department of IRE</h1>
+        <h1>Department of Internet of Things and Robotics Engineering<a href="https://ire.bdu.ac.bd/ire/teachers/active">(IRE)</a></h1>
         <h2>Faculty List</h2>
     </header>
 
@@ -51,23 +51,81 @@ table, th, td {
     <section class="full-time container">
         <table class="t_table">
             <tr>
-                <td colspan="5">
+                <td colspan="7">
                   <h1>Full Time</h1>
                 </td>
             </tr>
             <tr>
                 <th>SL</th>
                 <th>Teacher Name</th>
-                <th>Teacher Initial</th>
                 <th>Designation</th>
-                <th>Email/Phone</th>
+                <th>Phone Number</th>
+                <th>Email</th>
+                <th>Address</th>
+                <th>Blood Group</th>
             </tr>
             <tr>
-                <td>empty</td>
-                <td>empty</td>
-                <td>empty</td>
-                <td>empty</td>
-                <td>empty</td>
+                <td>1</td>
+                <td>Samsuddin Ahmed</td>
+                <td>ASSISTANT PROFESSOR</td>
+                <td>01944897313</td>
+                <td>samsuddin0001@bdu.ac.bd</td>
+                <td>Kaliakair, Gazipur-1750, Bangladesh.</td>
+                <td>A+</td>
+            </tr>  
+            <tr>
+                <td>1</td>
+                <td>Nurjahan Nipa</td>
+                <td>LECTURER</td>
+                <td>01768053215</td>
+                <td>nurjahan0001@bdu.ac.bd</td>
+                <td>Kaliakair, Gazipur-1750, Bangladesh.</td>
+                <td>O+</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Farzana Akter</td>
+                <td>LECTURER</td>
+                <td>01741582031</td>
+                <td>farzana0001@bdu.ac.bd</td>
+                <td>Kaliakair, Gazipur-1750, Bangladesh.</td>
+                <td>B+</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Suman Saha</td>
+                <td>LECTURER</td>
+                <td>01912127578</td>
+                <td>suman0001@bdu.ac.bd</td>
+                <td>Kaliakair, Gazipur-1750, Bangladesh.</td>
+                <td>B+</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Md. Toukir Ahmed</td>
+                <td>LECTURER</td>
+                <td>01738039128</td>
+                <td>toukir0001@bdu.ac.bd</td>
+                <td>Kaliakair, Gazipur-1750, Bangladesh.</td>
+                <td>B+</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>Mahir Mahbub</td>
+                <td>LECTURER</td>
+                <td>01732687621</td>
+                <td>mahbub0001@bdu.ac.bd</td>
+                <td>Kaliakair, Gazipur-1750, Bangladesh.</td>
+                <td>A+</td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>Sadia Enam</td>
+                <td>LECTURER</td>
+                <td>01986511690</td>
+                <td>sadia0001@bdu.ac.bd</td>
+                <td>Kaliakair, Gazipur-1750, Bangladesh.</td>
+                <td>A+</td>
             </tr>
            
         </table>
