all routine up-to-date

--- a/routineAll.html
+++ b/routineAll.html
@@ -1155,7 +1155,57 @@
     <th>4:00-4:50</th>
   </tr>
   <tr>
-    <td colspan="10">empty</td>
+    <td>রবিবার</td>
+    <td colspan="2">DS 107 (MSM) <br>Lecture R-1001</td>
+    <td colspan="2">PROG 101(TBA-ICT) <br> R-1001</td>
+    <td></td>
+    <td></td>
+    <td colspan="2">ET 103(TBA-EDU) <br>Lecture R-1001</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>সোমবার</td>
+    <td colspan="2">HIS 109 (MS) <br>Lecture R-1001</td>
+    <td colspan="2">ENG 105 (NH) <br> Lecture R-1001</td>
+    <td></td>
+    <td></td>
+    <td colspan="2">PROG 101(TBA-ICT) <br> Lecture R-1001</td>
+    <td></td>
+  <tr>
+    <td>মঙ্গলবার </td>
+    <td></td>
+    <td></td>
+    <td colspan="2">DS 107 (TBA-ICT) <br> tutorial R-1001</td>
+    <td></td>
+    <td></td>
+    <td colspan="2">ENG 106(NH)<br>Lab G-1 R-2701</td>
+    <!-- <td colspan="2">PROG 102(TBA-ICT)<br>Lab G-2 R-4701</td> -->
+    <td></td>
+  </tr>
+  <tr>
+    <td>বুধবার</td>
+    <td colspan="2">ET 103(TBA-EDU) <br>tutorial R-1001</td>
+    <td colspan="2">ENG 105 (NH) <br>  tutorial R-1001</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>বৃহস্পতিবার</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td colspan="2">HIS 109 (MS) <br>  tutorial R-1001</td>
+     <td></td>
+    <td></td>
+    <td colspan="2">PROG 102(TBA-ICT)<br>Lab G-1 R-4701</td>
+    <!-- <td colspan="2">ENG 106(NH)<br>Lab G-2 R-2701</td> -->
+     
+  </tr>
+  <tr>
+    <td colspan="10" style="width: 1100px;">Rony Ahmmed BDU-EdTech</td>
   </tr>
 </table>
 
@@ -1180,8 +1230,59 @@
     <th>3:00-3:50</th>
     <th>4:00-4:50</th>
   </tr>
+  
   <tr>
-    <td colspan="10">empty</td>
+    <td>রবিবার</td>
+    <td colspan="2">DS 107 (MSM) <br>Lecture R-1001</td>
+    <td colspan="2">PROG 101(TBA-ICT) <br> R-1001</td>
+    <td></td>
+    <td></td>
+    <td colspan="2">ET 103(TBA-EDU) <br>Lecture R-1001</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>সোমবার</td>
+    <td colspan="2">HIS 109 (MS) <br>Lecture R-1001</td>
+    <td colspan="2">ENG 105 (NH) <br> Lecture R-1001</td>
+    <td></td>
+    <td></td>
+    <td colspan="2">PROG 101(TBA-ICT) <br> Lecture R-1001</td>
+    <td></td>
+  <tr>
+    <td>মঙ্গলবার </td>
+    <td></td>
+    <td></td>
+    <td colspan="2">DS 107 (TBA-ICT) <br> tutorial R-1001</td>
+    <td></td>
+    <td></td>
+    <!-- <td colspan="2">ENG 106(NH)<br>Lab G-1 R-2701</td> -->
+    <td colspan="2">PROG 102(TBA-ICT)<br>Lab G-2 R-4701</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>বুধবার</td>
+    <td colspan="2">ET 103(TBA-EDU) <br>tutorial R-1001</td>
+    <td colspan="2">ENG 105 (NH) <br>  tutorial R-1001</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>বৃহস্পতিবার</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td colspan="2">HIS 109 (MS) <br>  tutorial R-1001</td>
+     <td></td>
+    <td></td>
+    <!-- <td colspan="2">PROG 102(TBA-ICT)<br>Lab G-1 R-4701</td> -->
+    <td colspan="2">ENG 106(NH)<br>Lab G-2 R-2701</td>
+     
+  </tr>
+  <tr>
+    <td colspan="10" style="width: 1100px;">Rony Ahmmed BDU-EdTech</td>
   </tr>
 </table>
 
@@ -1207,7 +1308,52 @@
     <th>4:00-4:50</th>
   </tr>
   <tr>
-    <td colspan="10">empty</td>
+    <td>রবিবার</td>
+    <td colspan="2"> </td>
+    <td colspan="2"> IRE 106 Lab(G1):TBA <br> R-1201 </td>
+    <td></td>
+    <td colspan="2">PROG 101 Lecture: TBA <br> R-1002</td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>সোমবার</td>
+    <td colspan="2">PROG 102 Lab (G1): TBA  <br> R-1202</td>
+    <td colspan="2"> DS 107 Lecture: TBA  <br> R-1002</td>
+    <td></td>
+    <td></td> 
+    <td></td> 
+    <td></td> 
+    <td></td>
+  <tr>
+    <td>মঙ্গলবার </td>
+    <td colspan="2">IRE 103 Lecture: TBA  <br> R-1002</td>
+    <td colspan="2">PROG 101 Tutorial: TBA  <br> R-1002</td>
+    <td></td>
+    <td colspan="2">IRE 103 Tutorial: TBA  <br> R-1002</td>
+    <td colspan="2">HIS 109 Tutorial: TBA  <br> R-1002</td> 
+  </tr>
+  <tr>
+    <td>বুধবার</td>
+    <td colspan="2">HIS 109 Lecture: TBA  <br> R-1002 </td>
+    <td colspan="2">IRE 105 Lecture: TBA  <br> R-1002</td>
+    <td></td>
+    <td colspan="2"> </td>
+    <td></td>
+    <td></td> 
+  </tr>
+  <tr>
+    <td>বৃহস্পতিবার</td>
+    <td colspan="2">DS 107 Tutorial: TBA <br> R-1002</td>
+    <td colspan="2">IRE 105 Tutorial: TBA <br> R-1002</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td> 
+  </tr>
+  <tr>
+    <td colspan="10" style="width: 1100px;">Rony Ahmmed BDU-EdTech</td>
   </tr>
 </table>
 
@@ -1233,7 +1379,52 @@
     <th>4:00-4:50</th>
   </tr>
   <tr>
-    <td colspan="10">empty</td>
+    <td>রবিবার</td>
+    <td colspan="2">PROG 102 Lab (G2): TBA <br>R-1201</td>
+    <td colspan="2">   </td>
+    <td></td>
+    <td colspan="2">PROG 101 Lecture: TBA <br> R-1002</td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>সোমবার</td>
+    <td colspan="2"> </td>
+    <td colspan="2"> DS 107 Lecture: TBA <br>  R-1002</td>
+    <td></td>
+    <td></td> 
+    <td></td> 
+    <td></td> 
+    <td></td>
+  <tr>
+    <td>মঙ্গলবার </td>
+    <td colspan="2">IRE 103 Lecture: TBA <br>  R-1002</td>
+    <td colspan="2">PROG 101 Tutorial: TBA <br>  R-1002</td>
+    <td></td>
+    <td colspan="2">IRE 103 Tutorial: TBA <br>  R-1002</td>
+    <td colspan="2">HIS 109 Tutorial: TBA  <br> R-1002</td> 
+  </tr>
+  <tr>
+    <td>বুধবার</td>
+    <td colspan="2">HIS 109 Lecture: TBA <br>  R-1002 </td>
+    <td colspan="2">IRE 105 Lecture: TBA <br>  R-1002</td>
+    <td></td>
+    <td colspan="2">IRE 106 Lab(G2):TBA  <br> R-1202</td>
+    <td></td>
+    <td></td> 
+  </tr>
+  <tr>
+    <td>বৃহস্পতিবার</td>
+    <td colspan="2">DS 107 Tutorial: TBA  <br> R-1002</td>
+    <td colspan="2">IRE 105 Tutorial: TBA <br> R-1002</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td> 
+  </tr>
+  <tr>
+    <td colspan="10" style="width: 1100px;">Rony Ahmmed BDU-EdTech</td>
   </tr>
 </table>
 
